@@ -1,29 +1,41 @@
 package org.azidp4j.util;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+/**
+ * Value with language tags.
+ *
+ * <p>Like following example. <ui>
+ * <li>name=inaba
+ * <li>name#ja=いなば
+ * <li>name#en=inaba </ui>
+ *
+ * @param <T>
+ */
 public class HumanReadable<T> {
     private final String key;
     private final T defaultValue;
     private final Map<String, T> tags;
 
+    /**
+     * Constructor.
+     *
+     * <p>For following example, <ui>
+     * <li>name=inabadef
+     * <li>name#ja=いなばja
+     * <li>name#en=inabaen </ui> construct instance like <code>
+     *     new HumanReadable("name", "inaba", Map.of("ja", "いなばja", "en", "inabaen")</code>
+     */
     public HumanReadable(String key, T defaultValue, Map<String, T> tags) {
         this.key = key;
         this.defaultValue = defaultValue;
-        this.tags = tags;
-    }
-
-    public HumanReadable<T> put(String tag, T value) {
-        if (tag != null) {
-            var merge = new HashMap<String, T>();
-            if (tags != null) {
-                merge.putAll(tags);
-            }
-            merge.put(tag, value);
-            return new HumanReadable<>(this.key, this.defaultValue, Map.copyOf(merge));
+        if (tags != null) {
+            this.tags = tags;
+        } else {
+            this.tags = Collections.emptyMap();
         }
-        return new HumanReadable<>(this.key, value, this.tags);
     }
 
     public String getKey() {
@@ -37,9 +49,6 @@ public class HumanReadable<T> {
     public T get(String tag) {
         if (tag == null) {
             return defaultValue;
-        }
-        if (tags == null) {
-            return null;
         }
 
         return tags.get(tag);
